--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^8.0.20",
     "async": "^2.5.0",
     "fast-exif": "^1.0.1",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "mkdirp": "^0.5.1"
   }
 }
