--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "@types/async": "^2.0.40",
-    "@types/minimist": "^1.2.0",
+    "@types/commander": "^2.9.1",
+    "@types/fs-extra": "^4.0.0",
     "@types/node": "^8.0.20",
     "async": "^2.5.0",
+    "commander": "^2.11.0",
     "fast-exif": "^1.0.1",
-    "minimist": "^1.2.0",
-    "mkdirp": "^0.5.1"
+    "fs-extra": "^4.0.1"
   }
 }
