Added feature to copy if file NOT exist

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,10 @@
                 "${workspaceRoot}/out/**/*.js"
             ],
             "args": [
-                            ] 
+                "copy",
+                "D:\\temp\\images",
+                "D:\\temp\\images_out"
+            ] 
         }
     ]
 }
