--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@types/commander": "^2.9.1",
     "@types/fs-extra": "^4.0.0",
     "@types/node": "^8.0.20",
+    "@types/recursive-readdir": "^1.2.28",
     "async": "^2.5.0",
     "commander": "^2.11.0",
     "fast-exif": "^1.0.1",
-    "fs-extra": "^4.0.1"
+    "fs-extra": "^4.0.1",
+    "recursive-readdir": "^2.2.1"
   }
 }
