--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,22 +1,18 @@
 {
-    // Use IntelliSense to learn about possible Node.js debug attributes.
+    // Use IntelliSense to learn about possible attributes.
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "node",
+            "type": "pwa-node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceRoot}\\index.js",
-            "outFiles": [
-                "${workspaceRoot}/out/**/*.js"
+            "skipFiles": [
+                "<node_internals>/**"
             ],
-            "args": [
-                "copy",
-                "D:\\temp\\images",
-                "D:\\temp\\images_out"
-            ] 
+            "program": "${workspaceFolder}\\index.js",
+            "args": ["dry", "C:\\Projets\\photos\\TEST", "C:\\Projets\\photos\\TEST_OUT"]
         }
     ]
 }
