--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/async": "^2.0.40",
-    "@types/commander": "^2.9.1",
-    "@types/fs-extra": "^4.0.0",
-    "@types/node": "^8.0.20",
-    "@types/recursive-readdir": "^1.2.28",
-    "async": "^2.5.0",
-    "commander": "^2.11.0",
+    "async": "^3.2.0",
+    "commander": "^6.2.1",
+    "exifr": "^6.0.0",
     "fast-exif": "^1.0.1",
-    "fs-extra": "^4.0.1",
-    "recursive-readdir": "^2.2.1"
+    "fs-extra": "^9.0.1",
+    "recursive-readdir": "^2.2.2"
+  },
+  "devDependencies": {
+    "@types/async": "^3.2.5",
+    "@types/commander": "^2.12.2",
+    "@types/fs-extra": "^9.0.5",
+    "@types/node": "^14.14.14",
+    "@types/recursive-readdir": "^2.2.0"
   }
 }
